@@ -149,7 +149,7 @@
 .\" ========================================================================
 .\"
 .IX Title "VISUDO 8"
-.TH VISUDO 8 "September  6, 2004" "1.6.8" "MAINTENANCE COMMANDS"
+.TH VISUDO 8 "November 11, 2004" "1.6.8p2" "MAINTENANCE COMMANDS"
 .SH "NAME"
 visudo \- edit the sudoers file
 .SH "SYNOPSIS"
